--- a/index.html
+++ b/index.html
@@ -6,8 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
+<!--Esto esta feisimo, se hace con un documento de cs, pero bueno es placeholder-->
+
 <body>
-    
+    <div class="background-image"></div>
 <script src="./app.js"></script>
 </body>
+
+<style>
+    * {
+        margin: 0;
+        padding: 0;
+    }
+
+    .background-image {
+    background-image: url(./gato\ fondo.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 100vh;
+    }
+
+</style>
+
 </html> 
